--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -25,20 +25,20 @@ jobs:
         node-version: '18'
 
     - name: Create artifacts directory
-      run: mkdir -p /home/usman-saleem/artifacts
-      # This step creates the directory where the build files will be copied.
+      run: mkdir -p ./artifacts
+      # This step creates a directory in the runner's working directory.
 
     - name: Install dependencies
       run: npm install
-      working-directory: /home/runner/work/node-app/node-app
+      working-directory: ./node-app
 
     - name: Run build script
       run: npm run build
-      working-directory: /home/runner/work/node-app/node-app
+      working-directory: ./node-app
 
     - name: Build Docker image
       run: docker build -t nodejs-sample-app .
-      working-directory: /home/runner/work/node-app/artifacts
+      working-directory: ./artifacts
 
     - name: Run Docker container
       run: docker run -d -p 3000:3000 --name nodejs-sample-app nodejs-sample-app
