Fix: Correct paths and directory creation in GitHub Actions

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -22,19 +22,20 @@ jobs:
         node-version: '18'
 
     - name: Create artifacts directory
-      run: mkdir -p ./artifacts
+      run: mkdir -p ./node-app/artifacts
+      working-directory: /home/runner/work/node-app/node-app
 
     - name: Install dependencies
       run: npm install
-      working-directory: ./node-app
+      working-directory: /home/runner/work/node-app/node-app
 
     - name: Run build script
       run: npm run build
-      working-directory: ./node-app
+      working-directory: /home/runner/work/node-app/node-app
 
     - name: Build Docker image
       run: docker build -t nodejs-sample-app .
-      working-directory: ./artifacts
+      working-directory: /home/runner/work/node-app/node-app/artifacts
 
     - name: Run Docker container
       run: docker run -d -p 3000:3000 --name nodejs-sample-app nodejs-sample-app
