--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -23,25 +23,24 @@ jobs:
 
     - name: Install dependencies
       run: npm install
-      working-directory: ./node-app
+      working-directory: /home/runner/work/node-app/node-app
 
     - name: Run build script
       run: npm run build
-      working-directory: ./node-app
+      working-directory: /home/runner/work/node-app/node-app
 
     - name: Create artifacts directory
-      run: mkdir -p ./node-app/artifacts
-      working-directory: ./node-app
+      run: mkdir -p /home/runner/work/node-app/node-app/artifacts
 
     - name: Move build artifacts
-      run: cp -r ./node-app/build/* ./node-app/artifacts/
-      working-directory: ./node-app
+      run: cp -r /home/runner/work/node-app/node-app/build/* /home/runner/work/node-app/node-app/artifacts/
+      working-directory: /home/runner/work/node-app/node-app
 
     - name: Build Docker image
       run: docker build -t nodejs-sample-app .
-      working-directory: ./node-app/artifacts
+      working-directory: /home/runner/work/node-app/node-app/artifacts
 
     - name: Run Docker container
       run: docker run -d -p 3000:3000 --name nodejs-sample-app nodejs-sample-app
-      working-directory: ./node-app/artifacts
+      working-directory: /home/runner/work/node-app/node-app/artifacts
 
