--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nodejs-sample-app",
   "version": "1.0.0",
   "scripts": {
-    "build": "mkdir -p ./artifacts && cp -r ./build/* ./artifacts/"
+    "build": "mkdir -p ./artifacts && cp -r ./* ./artifacts/"
   },
   "dependencies": {
   }
