--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -23,17 +23,15 @@ jobs:
 
     - name: Install dependencies
       run: npm install
-      working-directory: /home/runner/work/node-app/node-app
+      working-directory: ./node-app
 
     - name: Run build script
       run: npm run build
-      working-directory: /home/runner/work/node-app/node-app
+      working-directory: ./node-app
 
     - name: Build Docker image
-      run: docker build -t nodejs-sample-app .
-      working-directory: /home/runner/work/node-app/node-app/artifacts
+      run: docker build -t nodejs-sample-app ./node-app
 
     - name: Run Docker container
       run: docker run -d -p 3000:3000 --name nodejs-sample-app nodejs-sample-app
-      working-directory: /home/runner/work/node-app/node-app/artifacts
 
