--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -23,11 +23,11 @@ jobs:
 
     - name: Install dependencies
       run: npm install
-      working-directory: ./node-app
+      working-directory: node-app
 
     - name: Run build script
       run: npm run build
-      working-directory: ./node-app
+      working-directory: node-app
 
     - name: Build Docker image
       run: docker build -t nodejs-sample-app ./node-app
